tests/invalid/exist_foreign_error.err_exp3
exist_foreign_error.m:031: The foreign language code for function
exist_foreign_error.m:031:   `exist_foreign_error.get_pti_from_arg_types'/2
exist_foreign_error.m:031:   should define the variable `TypeInfo_for_T'.
